components/markdown/src/snapshots/markdown__markdown__tests__reflow_alignment.snap
---
source: components/markdown/src/markdown.rs
expression: render_reflow(content)
---
<div class="reflow reflow-bp-30rem"><table><thead><tr><th style="text-align: left" scope="col">L</th><th style="text-align: center" scope="col">C</th><th style="text-align: right" scope="col">R</th></tr></thead><tbody>
<tr><td style="text-align: left" data-label="L">a</td><td style="text-align: center" data-label="C">b</td><td style="text-align: right" data-label="R">c</td></tr>
</tbody></table>
</div>
