components/markdown/src/snapshots/markdown__markdown__tests__reflow_basic.snap
---
source: components/markdown/src/markdown.rs
expression: render_reflow(content)
---
<div class="reflow reflow-bp-40rem"><table><thead><tr><th scope="col">Name</th><th scope="col">Department</th></tr></thead><tbody>
<tr><td data-label="Name">Ada</td><td data-label="Department">Platform</td></tr>
<tr><td data-label="Name">Linus</td><td data-label="Department">Kernel</td></tr>
</tbody></table>
</div>
