components/markdown/src/snapshots/markdown__markdown__tests__responsive_table_bp_override.snap
---
source: components/markdown/src/markdown.rs
expression: render_responsive_table(content)
---
<div class="rt rt--cards rt--bp-80" style="--rt-label:1ch"><table><thead><tr><th scope="col">A</th><th scope="col">B</th></tr></thead><tbody>
<tr><td data-label="A">1</td><td data-label="B">2</td></tr>
</tbody></table>
</div>
