components/markdown/src/snapshots/markdown__markdown__tests__responsive_table_inline_markup.snap
---
source: components/markdown/src/markdown.rs
expression: render_responsive_table(content)
---
<div class="rt rt--cards rt--bp-24" style="--rt-label:9ch"><table><thead><tr><th scope="col"><strong>Bold head</strong></th><th scope="col"><code>code</code></th></tr></thead><tbody>
<tr><td data-label="Bold head"><em>em</em></td><td data-label="code"><a href="https://example.com">x</a></td></tr>
</tbody></table>
</div>
