components/markdown/src/snapshots/markdown__markdown__tests__responsive_table_no_table_is_noop.snap
---
source: components/markdown/src/markdown.rs
expression: render_responsive_table(content)
---
<p>Just a paragraph, no table here.</p>
