components/markdown/src/snapshots/markdown__markdown__tests__responsive_table_off_directive.snap
---
source: components/markdown/src/markdown.rs
expression: render_responsive_table(content)
---
<table><thead><tr><th>A</th><th>B</th></tr></thead><tbody>
<tr><td>1</td><td>2</td></tr>
</tbody></table>
